@@ -6635,6 +6635,90 @@ literal|0
 argument_list|)
 return|;
 block|}
+comment|/**    * Create a KeyValue for the specified row, family and qualifier that would be    * larger than or equal to all other possible KeyValues that have the same    * row, family, qualifier.    * Used for reseeking.    * @param row row key    * @param roffset row offset    * @param rlength row length    * @param family family name    * @param foffset family offset    * @param flength family length    * @param qualifier column qualifier    * @param qoffset qualifier offset    * @param qlength qualifier length    * @return Last possible key on passed row, family, qualifier.    */
+specifier|public
+specifier|static
+name|KeyValue
+name|createLastOnRow
+parameter_list|(
+specifier|final
+name|byte
+index|[]
+name|row
+parameter_list|,
+specifier|final
+name|int
+name|roffset
+parameter_list|,
+specifier|final
+name|int
+name|rlength
+parameter_list|,
+specifier|final
+name|byte
+index|[]
+name|family
+parameter_list|,
+specifier|final
+name|int
+name|foffset
+parameter_list|,
+specifier|final
+name|int
+name|flength
+parameter_list|,
+specifier|final
+name|byte
+index|[]
+name|qualifier
+parameter_list|,
+specifier|final
+name|int
+name|qoffset
+parameter_list|,
+specifier|final
+name|int
+name|qlength
+parameter_list|)
+block|{
+return|return
+operator|new
+name|KeyValue
+argument_list|(
+name|row
+argument_list|,
+name|roffset
+argument_list|,
+name|rlength
+argument_list|,
+name|family
+argument_list|,
+name|foffset
+argument_list|,
+name|flength
+argument_list|,
+name|qualifier
+argument_list|,
+name|qoffset
+argument_list|,
+name|qlength
+argument_list|,
+name|HConstants
+operator|.
+name|OLDEST_TIMESTAMP
+argument_list|,
+name|Type
+operator|.
+name|Minimum
+argument_list|,
+literal|null
+argument_list|,
+literal|0
+argument_list|,
+literal|0
+argument_list|)
+return|;
+block|}
 comment|/**    * @param b    * @return A KeyValue made of a byte array that holds the key-only part.    * Needed to convert hfile index members to KeyValues.    */
 specifier|public
 specifier|static
