@@ -630,11 +630,6 @@ argument_list|)
 expr_stmt|;
 comment|// Can't early out now, because DelFam come before any other keys
 block|}
-comment|// May be able to optimize the SKIP here, if we matched
-comment|// due to a DelFam, we can skip to next row
-comment|// due to a DelCol, we can skip to next col
-comment|// But it requires more info out of isDelete().
-comment|// needful -> million column challenge.
 return|return
 name|MatchCode
 operator|.
@@ -665,6 +660,11 @@ name|timestamp
 argument_list|)
 condition|)
 block|{
+comment|// May be able to optimize the SKIP here, if we matched
+comment|// due to a DelFam, we can skip to next row
+comment|// due to a DelCol, we can skip to next col
+comment|// But it requires more info out of isDelete().
+comment|// needful -> million column challenge.
 return|return
 name|MatchCode
 operator|.
@@ -967,6 +967,8 @@ operator|>=
 literal|0
 condition|)
 block|{
+comment|// KV>= STOPROW
+comment|// then NO there is nothing left.
 return|return
 literal|false
 return|;
@@ -1104,6 +1106,178 @@ name|kv
 argument_list|)
 return|;
 block|}
+block|}
+specifier|public
+name|KeyValue
+name|getKeyForNextColumn
+parameter_list|(
+name|KeyValue
+name|kv
+parameter_list|)
+block|{
+name|ColumnCount
+name|nextColumn
+init|=
+name|columns
+operator|.
+name|getColumnHint
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|nextColumn
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+name|KeyValue
+operator|.
+name|createLastOnRow
+argument_list|(
+name|kv
+operator|.
+name|getBuffer
+argument_list|()
+argument_list|,
+name|kv
+operator|.
+name|getRowOffset
+argument_list|()
+argument_list|,
+name|kv
+operator|.
+name|getRowLength
+argument_list|()
+argument_list|,
+name|kv
+operator|.
+name|getBuffer
+argument_list|()
+argument_list|,
+name|kv
+operator|.
+name|getFamilyOffset
+argument_list|()
+argument_list|,
+name|kv
+operator|.
+name|getFamilyLength
+argument_list|()
+argument_list|,
+name|kv
+operator|.
+name|getBuffer
+argument_list|()
+argument_list|,
+name|kv
+operator|.
+name|getQualifierOffset
+argument_list|()
+argument_list|,
+name|kv
+operator|.
+name|getQualifierLength
+argument_list|()
+argument_list|)
+return|;
+block|}
+else|else
+block|{
+return|return
+name|KeyValue
+operator|.
+name|createFirstOnRow
+argument_list|(
+name|kv
+operator|.
+name|getBuffer
+argument_list|()
+argument_list|,
+name|kv
+operator|.
+name|getRowOffset
+argument_list|()
+argument_list|,
+name|kv
+operator|.
+name|getRowLength
+argument_list|()
+argument_list|,
+name|kv
+operator|.
+name|getBuffer
+argument_list|()
+argument_list|,
+name|kv
+operator|.
+name|getFamilyOffset
+argument_list|()
+argument_list|,
+name|kv
+operator|.
+name|getFamilyLength
+argument_list|()
+argument_list|,
+name|nextColumn
+operator|.
+name|getBuffer
+argument_list|()
+argument_list|,
+name|nextColumn
+operator|.
+name|getOffset
+argument_list|()
+argument_list|,
+name|nextColumn
+operator|.
+name|getLength
+argument_list|()
+argument_list|)
+return|;
+block|}
+block|}
+specifier|public
+name|KeyValue
+name|getKeyForNextRow
+parameter_list|(
+name|KeyValue
+name|kv
+parameter_list|)
+block|{
+return|return
+name|KeyValue
+operator|.
+name|createLastOnRow
+argument_list|(
+name|kv
+operator|.
+name|getBuffer
+argument_list|()
+argument_list|,
+name|kv
+operator|.
+name|getRowOffset
+argument_list|()
+argument_list|,
+name|kv
+operator|.
+name|getRowLength
+argument_list|()
+argument_list|,
+literal|null
+argument_list|,
+literal|0
+argument_list|,
+literal|0
+argument_list|,
+literal|null
+argument_list|,
+literal|0
+argument_list|,
+literal|0
+argument_list|)
+return|;
 block|}
 comment|/**    * {@link #match} return codes.  These instruct the scanner moving through    * memstores and StoreFiles what to do with the current KeyValue.    *<p>    * Additionally, this contains "early-out" language to tell the scanner to    * move on to the next File (memstore or Storefile), or to return immediately.    */
 specifier|public
